--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page_header">
-	<h1>New <%= @gallery.name.titleize %> Image </h1>
+	<h1>New <%= @gallery[:name] %> Image </h1>
 </div>
 
 <section class="page_content">
