--- a/app/views/pages/default_layouts/_default.html.erb
+++ b/app/views/pages/default_layouts/_default.html.erb
@@ -1,8 +1,5 @@
-<div id="default">
-	<div id="main_content" class="container">
+<div id="default_layout">
+	<div id="main_content">
 		<%= region('content') %>
-	</div>
-	<div id="main_content" class="container">
-		<%= region(BACKGROUND_IMAGE) %>
 	</div>
 </div>
