--- a/app/views/widgets/form/_image_widget.html.erb
+++ b/app/views/widgets/form/_image_widget.html.erb
@@ -1,13 +1,13 @@
 <div class='top_right_controls'>
-  <%= link_to 'Add New Image', new_gallery_image_path(:gallery_id => 'content'), :class => 'btn btn-info', :id => 'new_image_link' %>
+  <%= link_to 'Add New Image', new_image_path(:gallery => 'content'), :class => 'btn btn-info', :id => 'new_image_link' %>
 </div>
 
 <div class="field clearfix">
   <%= f.label :choose_image %>
-  <% ContentImage.all.each do |image| %>
+  <% Image.from_gallery('content').each do |image| %>
    <div class="image_widget_form_item">
     <div class="image_widget_form_item_details">
-      <%= radio_button_tag 'image_widget[content_image_id]', image.id, widget.content_image == image %>
+      <%= radio_button_tag 'image_widget[image_id]', image.id, widget.image == image %>
       <%= label_tag image.name %>     
     </div>
     <%= image_tag image.file.thumb.url %><br />
