--- a/app/views/widgets/show/_image_widget.html.erb
+++ b/app/views/widgets/show/_image_widget.html.erb
@@ -1,9 +1,9 @@
-<% if widget.content_image %>
+<% if widget.image %>
 	<div class="image_widget">
 		<% unless widget.link.blank? %>
-			<%= link_to (image_tag widget.content_image.file.url), widget.link %><br />
+			<%= link_to (image_tag widget.image.file.url), widget.link %><br />
 		<% else %>
-			<%= image_tag widget.content_image.file.url %><br />
+			<%= image_tag widget.image.file.url %><br />
 		<% end %>
 	</div>
 <% else %>
