--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,32 @@
-#wrapper {
-	width: 980px;
-	margin: auto;
+body {
+	background: #eee;
+}
+
+body, p {font-family: courier,"Helvetica Neue",Helvetica,Arial,sans-serif;}
+
+#wrapper { background: white; box-shadow: 0px 0px 20px #333; width: 980px; margin: auto; min-height: 485px;
+	
+	#header { padding-top: 20px;
+		height: 130px;
+		#top_nav {
+			float: right; margin-top: 50px;
+			a { display: block; float: left; margin-right: 20px; font-size: 18px; color: #aaa; }
+		}
+	}
+	
+	#main_content {
+		
+		margin: 20px 0;
+	
+		#home { text-align: center;
+			p { font-size: 18px; margin-top: 10px; }
+		}
+	
+		.gallery_widget {
+			.gallery_item {
+				float: left; margin: 0 10px 10px 0;
+			}
+		}
+	}
+
 }
