--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,9 +1,11 @@
 <div class="top_right_controls">
-	<%= link_to 'New Image', new_gallery_image_path(@gallery.name), :class => 'btn btn-info' %>
+	<% Image::GALLERIES.each do |name, info| %>
+  	<%=	link_to "New #{info[:name]} Image", new_image_path(:gallery => info[:slug]), :class => 'btn btn-info' %>
+  <% end %>
 </div>
 
 <div class="page_header">
-	<h1><%= @gallery.name.titleize %> Images</h1>
+	<h1>Images</h1>
 </div>
 
 <section class="page_content">
@@ -11,8 +13,8 @@
 		<% @images.asc(:position).each do |image| %>
 			<div class="index_item image_index_item" id="image_<%= image.id %>">
 				<div class="controls">
-					<%= link_to 'Delete', gallery_image_path(@gallery.name, image), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
-					<%= link_to 'Edit', edit_gallery_image_path(@gallery.name, image), :class => 'btn btn-warning' %>				
+					<%= link_to 'Delete', image_path(image), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+					<%= link_to 'Edit', edit_image_path(image), :class => 'btn btn-warning' %>				
 				</div>
 				<div class="images_index_image">
 					<%= image_tag image.file.thumb.url %> &nbsp;<%= image.name %>
@@ -31,7 +33,7 @@
       update: function(){
         $.ajax({
        	 type: 'post', 
-         data: $('#sortable_images').sortable('serialize') + '&gallery=<%= @gallery.name-%>',
+         data: $('#sortable_images').sortable('serialize') + '&gallery=<%#= @gallery.slug-%>',
          dataType: 'script', 
          url: '/admin/order_images'
 			  })
