--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Default Site</title>
+  <title>Staggered Ink</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body id="default_site">
+<body id="staggered_ink">
 	<div id='wrapper'>
-		<div id='header'>
-			<div id="logo">
-				<h1><%= logo %></h1>
+		<div class="container">
+
+			<header id="header">
+				<div id='top_nav'>
+					<%= render 'layouts/top_nav', :nav_menu => NavMenu.first %>
+				</div>
+				<div id="logo">
+					<h1><%= image_tag 'logo.jpg' unless homepage? %></h1>
+				</div>
+			</header>
+
+			<div id="main_content">
+				<%= yield %>
+			</div>
+
+			<div id="footer">
+				<div id="footer_wrapper">
+					<%= render 'layouts/footer' %>
+				</div>
 			</div>
 		</div>
-		<div id='top_nav'>
-			<%= render 'layouts/top_nav', :nav_menu => NavMenu.first %>
-		</div>
-		
-		<%= yield %>
-
-
 	</div>
-	<div id="footer">
-		<div id="footer_wrapper">
-			<%= render 'layouts/footer' %>
-		</div>
-	</div>
+</body>
 	<%= render 'layouts/analytics' %>
 </body>
 </html>
