--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.text_field :name %>
   </div>
 
-  <% unless @gallery[:width] %>
+  <% if @gallery[:content] %>
 	  <div class="field">
 	    <%= f.label :width %>
 	    <%= f.text_field :width %>
