--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,11 +1,9 @@
 <div class="top_right_controls">
-	<% Image::GALLERIES.each do |name, info| %>
-  	<%=	link_to "New #{info[:name]} Image", new_image_path(:gallery => info[:slug]), :class => 'btn btn-info' %>
-  <% end %>
+  <%=	link_to "New #{@gallery[:name]} Image", new_image_path(:gallery => @gallery[:slug]), :class => 'btn btn-info' %>
 </div>
 
 <div class="page_header">
-	<h1>Images</h1>
+	<h1><%= @gallery[:name] %> Images</h1>
 </div>
 
 <section class="page_content">
@@ -13,8 +11,8 @@
 		<% @images.asc(:position).each do |image| %>
 			<div class="index_item image_index_item" id="image_<%= image.id %>">
 				<div class="controls">
-					<%= link_to 'Delete', image_path(image), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
-					<%= link_to 'Edit', edit_image_path(image), :class => 'btn btn-warning' %>				
+					<%= link_to 'Delete', image_path(@gallery[:slug], image), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+					<%= link_to 'Edit', edit_image_path(@gallery[:slug], image), :class => 'btn btn-warning' %>				
 				</div>
 				<div class="images_index_image">
 					<%= image_tag image.file.thumb.url %> &nbsp;<%= image.name %>
