--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -32,7 +32,7 @@
 						<% group.compact.each do |layout| %>
 						   <div class="template_item">
 								<%#= f.radio_button :layout, layout, {:checked => layout == @page.layout} %>
-								<%= link_to (image_tag "layouts/#{layout}.jpg"), "#", :id => layout, :class => 'layout_item' %>
+								<%= link_to layout_image(layout), "#", :id => layout, :class => 'layout_item' %>
 						  </div>
 						<% end %>
 					</div>
