changing the order widgets routes

--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -28,7 +28,7 @@
 	       	 type: 'post', 
 	         data: element.sortable('serialize') + '&page_id=<%= @page.id-%>' + '&region=' + element.attr('id'),
 	         dataType: 'script', 
-	         url: '/cms/order_widgets'
+	         url: '/admin/order_widgets'
 				  })
 	      }	
 		})
