--- a/app/views/widgets/form/_text_widget.html.erb
+++ b/app/views/widgets/form/_text_widget.html.erb
@@ -1,4 +1,5 @@
+<%= tinymce %>
 <div class="field lightbox">
   <%= f.label :text %>
-	<%= f.text_area :text %>
+	<%= f.text_area :text, :class => "tinymce", :rows => 40, :cols => 120 %>
 </div>
